--- a/style.css
+++ b/style.css
@@ -11,6 +11,11 @@ body {
 	/*background-color: #fff;*/
 }
 
+#mnuToggle {
+	position: fixed;
+	width: 10%;
+}
+
 #header {
 	background-color: #000;
 	color: #fff;
