--- a/index.css
+++ b/index.css
@@ -1,7 +1,7 @@
 body {
 	font-family: 'Roboto', sans-serif;
 	font-size: 18px;
-	/*background-color: #000;*/
+	background-color: #EFEBE9;
 	list-style: none;
 }
 
@@ -60,7 +60,7 @@ body {
 	margin: 0px 5px;
 	padding: 0px 5px;
 	border-left: 6px solid #000;
-	/*background-color: #fff;*/
+	background-color: #fff;
 }
 
 #fixedtop {
@@ -86,7 +86,7 @@ body {
 }
 
 #header {
-	padding-left: 60px;
+	padding-left: 46px;
 	position: fixed;
 	top: -20px;
 }
