--- a/index.css
+++ b/index.css
@@ -1,7 +1,7 @@
 body {
 	font-family: 'Scope One', serif;
 	font-size: 18px;
-	background-color: #E0E0E0;
+	background-color: #fff;
 	list-style: none;
 }
 
@@ -27,7 +27,7 @@ body {
 
 .mnu_side {
 	color: #fff;
-	background-color: #01579B;/* 212121; */
+	background-color: #212121;/* 212121; */
 	position: fixed;
 	top: -20px;
 	left: -161px;
@@ -47,7 +47,8 @@ body {
 
 .mnu_side li a {
 	color: #fff;
-	font-family: 'Scope One', serif;
+	transition: 0.2s color ease;
+	font-family: 'Arial', serif;
 	font-weight: bold;
 	font-size: 20px;
 	text-decoration: none;
@@ -55,18 +56,20 @@ body {
 	padding: 10px;
 	position: relative;
 	left: -40px;
-	background-color: #0288D1;
+	background-color: #424242;
+	border-radius: 8%;
 }
 
 .mnu_side li a:hover {
-	color: #ffd41c;
+	color: #FFD740;
 }
 
 .wrapper {
 	top: -8px;
 	margin: 0px 5px;
 	padding: 0px 5px;
-	border-left: 6px solid #000;
+	border-left: 6px solid #E0E0E0;
+	border-bottom: 6px solid #E0E0E0;
 	background-color: #fff;
 	box-shadow: 10px 10px 4px #888888;
 }
@@ -79,7 +82,7 @@ body {
 	width: 100%;/* 280px; */
 	/* margin: 20px 0px; */
 	background-color: #fff;
-	border-bottom: 4px solid #000;
+	border-bottom: 6px solid #E0E0E0;
 }
 
 #mnu_toggle {
@@ -87,10 +90,13 @@ body {
 	position: fixed;
 	top: 16px;
 	width: 40px;
+	filter: invert(0%);
+	transition: filter 0.1s ease;
 }
 
 #mnu_toggle:hover {
 	cursor: pointer;
+	filter: invert(100%);
 }
 
 #header {
@@ -101,6 +107,7 @@ body {
 
 #header h1 {
 	padding: 10px 10px;
+	font-family: 'Arial';
 }
 
 #content {
@@ -129,8 +136,8 @@ body {
 }
 
 .colored {
-	background-color: #E53935;
-	color: #fff;
+	/*background: #E53935;
+	color: #fff;*/
 	font-family: 'Bitter', serif;
 }
 
@@ -146,12 +153,13 @@ body {
 /* -- Carousel Galleries -- */
 .stepcarousel {
 	position: relative;
-	border: 10px solid #263238;
+	background: #FDD835;
+	border: 10px solid #FBC02D;
 	overflow: hidden;
 	/* overflow: scroll; */
 	width: 240px;
 	height: 200px;
-	box-shadow: 8px 8px 2px #888888;
+	box-shadow: 8px 8px 2px #F57F17;
 }
 
 .stepcarousel .belt {
@@ -210,12 +218,22 @@ body {
 	display: block;
 }
 
+.beltbtns {
+	background-color: #FBC02D;
+	position: absolute;
+	left: 180px;
+	top: 0px;
+	height: 160px;
+	/*border: 8px solid black;*/
+}
+
 .beltbtn {
 	position: absolute;
-	left: 200px;
+	left: 20px;
 	
-	background: white;
-	border: 2px solid black;
+	background-color: #FDD835;
+	border: 4px solid #F9A825;
+	transition: border 0.05s ease;
 	border-radius: 10px;
 	width: 12px;
 	height: 12px;
@@ -224,7 +242,8 @@ body {
 }
 
 .beltbtn:hover {
-	background: gray;
+	background: #F9A825;
+	border: 6px solid #F57F17;
 }
 
 .beltbtnup {
