--- a/index.css
+++ b/index.css
@@ -1,8 +1,10 @@
 body {
 	font-family: 'Scope One', serif;
 	font-size: 18px;
-	background-color: #fff;
+	/*background-color: #fff;*/
 	list-style: none;
+	background: url('assets/bg.jpg');
+	background-position: 1600px 1200px;
 }
 
 .mnu {
@@ -27,7 +29,7 @@ body {
 
 .mnu_side {
 	color: #fff;
-	background-color: #212121;/* 212121; */
+	background-color: #FF9100;/* 212121; */
 	position: fixed;
 	top: -20px;
 	left: -161px;
@@ -56,7 +58,7 @@ body {
 	padding: 10px;
 	position: relative;
 	left: -40px;
-	background-color: #424242;
+	background-color: #F57C00;/*424242*/
 	border-radius: 8%;
 }
 
@@ -68,21 +70,32 @@ body {
 	top: -8px;
 	margin: 0px 5px;
 	padding: 0px 5px;
-	border-left: 6px solid #E0E0E0;
-	border-bottom: 6px solid #E0E0E0;
+	border: 6px solid #F44336;
+	/*border-left: 6px solid #C62828;E0E0E0
+	border-bottom: 6px solid #C62828;*/
 	background-color: #fff;
-	box-shadow: 10px 10px 4px #888888;
+	box-shadow: 10px 10px 4px #B71C1C;/*888888*/
 }
 
 #fixedtop {
 	position: fixed;
 	top: 0px;
-	height: 66px;
-	max-height: 66px;
+	height: 86px;/*66*/
+	max-height: 86px;
 	width: 100%;/* 280px; */
 	/* margin: 20px 0px; */
-	background-color: #fff;
-	border-bottom: 6px solid #E0E0E0;
+	/*background-color: #fff;*/
+	background-color: #FDD835;
+	border-bottom: 6px solid #FBC02D;
+	border-left: 6px solid #FBC02D;
+	margin-left: -5px;
+	padding-left: 4px;
+}
+
+#fixedtop #banner {
+	position: fixed;
+	top: 6px;
+	width: 300px;
 }
 
 #mnu_toggle {
@@ -123,7 +136,7 @@ body {
 /* --- Custom Classes --- */
 .divider {
 	color: white;
-	margin: 26px 0px;
+	margin: 30px 0px;
 }
 
 .para {
