--- a/index.css
+++ b/index.css
@@ -1,10 +1,15 @@
 body {
-	font-family: 'Scope One', serif;
-	font-size: 18px;
-	/*background-color: #fff;*/
-	list-style: none;
-	background: url('assets/bg.jpg');
-	background-position: 1600px 0px;
+	font-family: 'Libre Baskerville', serif;
+	font-size: 20px;
+}
+
+a {
+	color: #F9A825;
+	text-decoration: none;
+}
+
+a:hover {
+	color: #c1c1c1;
 }
 
 .mnu {
@@ -27,10 +32,34 @@ body {
 	transition: left 0.2s ease-out;
 }
 
+#mnu_toggle {
+	z-index:1;
+	padding: 6px;
+	position: fixed;
+	top: 16px;
+	width: 40px;
+	filter: invert(100%);
+	transition: filter 0.1s ease;
+	border: solid 2px #000;
+	border-radius: 10%;
+	transition: border-radius 0.4s ease;
+}
+
+#mnu_toggle:hover {
+	cursor: pointer;
+	filter: invert(60%);
+	border-color: #fff;
+	border-radius: 80%;
+}
+
+.mnu_side , .mnu {
+	-webkit-transition: left 0.2s ease;
+	-moz-transition: left 0.2s ease;
+	transition: left 0.2s ease;
+}
+
 .mnu_side {
-	color: #fff;
-	/*background-color: #FF9100;/* 212121; */
-	background: url('assets/mnuSide.png');
+	color: #ffffff;
 	position: fixed;
 	top: -20px;
 	left: -161px;
@@ -40,7 +69,6 @@ body {
 	list-style: none;
 	overflow-x: hidden;
 	white-space: nowrap;
-	font-family: 'Scope One', serif;
 }
 
 .mnu_side ul {
@@ -55,39 +83,32 @@ body {
 
 .mnu_side li a {
 	color: #fff;
-	transition: 0.2s color ease;
-	font-family: 'Arial', serif;
+	font-family: 'Merriweather';
 	font-weight: bold;
-	font-size: 20px;
+	font-size: 18px;
 	text-decoration: none;
 	display: block;
 	padding: 10px;
-	position: relative;
-	left: -40px;
-	background: #212121;/*424242
-	/*background: url('assets/mnuSide.jpg');*/
-	transition: background 0.2s ease;
+	background: #212121;
 	border-left: none;
-	transition: border-left 0.1s ease;
+	-webkit-transition: border-left 0.1s, background 0.2s, color 0.1s;
+	transition: border-left 0.1s, background 0.2s, color 0.1s;
+	-moz-transition: border-left 0.1s, background 0.2s, color 0.1s;
 }
 
 .mnu_side li a:hover {
-	color: #F9A825;/*FFD740*/
+	color: #F9A825;
 	background: #FFEB3B;
 	border-left: 6px solid #F9A825;
 }
 
+
 .wrapper {
-	font-family: 'Bitter', sans-serif;
-	top: -18px;
-	margin: 0px 5px;
+	font-family: 'Merriweather', serif;
+	top: -4px;
 	padding: 0px 5px;
-	border: 6px solid #14181a;
-	border-radius: 4%;
-	/*border-left: 6px solid #C62828;E0E0E0
-	border-bottom: 6px solid #C62828;*/
 	background-color: #fff;
-	box-shadow: 10px 10px 4px #222222;/*888888*/
+	overflow-x: hidden;
 }
 
 #fixedtop {
@@ -127,26 +148,6 @@ body {
 	border: solid 6px #fff;
 }
 
-#mnu_toggle {
-	z-index:1;
-	padding: 6px;
-	position: fixed;
-	top: 16px;
-	width: 40px;
-	filter: invert(100%);
-	transition: filter 0.1s ease;
-	border: solid 2px #000;
-	border-radius: 10%;
-	transition: border-radius 0.4s ease;
-}
-
-#mnu_toggle:hover {
-	cursor: pointer;
-	filter: invert(60%);
-	border-color: #fff;
-	border-radius: 80%;
-}
-
 #header {
 	padding-left: 54px;
 	position: fixed;
@@ -159,35 +160,111 @@ body {
 }
 
 #content {
-	font-size: 14px;
-	width: 100%;
-}
-
-#footer {
-	margin-top: 30px;
-	font-size: 14px;
 	overflow-x: hidden;
 }
 
+#footer {
+	text-align: center;
+	margin: 40px 0px;
+	font-size: 12px;
+}
+
 /* --- Custom Classes --- */
+.space {
+	display: none;
+}
+
+.mouseover {
+	display: unset;
+	visibility: hidden;
+}
+
+.centered {
+	display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.centext {
+	text-align: center;
+}
+
+.logo {
+	width: 80px;
+}
+
 .divider {
 	color: white;
 	margin: 40px 0px;
 }
 
 .para {
-	font-size: 18px;
-	font-family: 'Nunito Sans', sans-serif;
+	font-size: 16px;
+}
+
+.additional {
+	font-family: 'Enriqueta', serif;
+	font-size: 16px;
+	color: #3e3e3e;
+	margin: 4px 0px;
+}
+
+.divider {
+	color: white;
+	margin: 26px 0px;
+}
+
+.divider2 {
+	color: white;
+	margin: 8px 0px;
+}
+
+.separation {
+	color: #fff;
+	height: 0px;
+	width: 100%;
+	display: block;
+	margin: 8px 0px;
+	border-bottom: 4px solid #212121;
+}
+
+.separation2 {
+	color: #212121;
+	height: 0px;
+	width: 100%;
+	display: block;
+	margin: 8px 0px;
+	border-bottom: 4px solid #c1c1c1;
 }
 
 .photo {
-	width: 220px;
+	width: 256px;
+}
+
+.phover {
+	position: relative;
+	top: 0px;
+	filter: brightness(100%);
+	transition: top 0.2s ease-out, filter 0.2s;
+}
+
+.phover:hover {
+	top: -10px;
+	filter: brightness(60%);
 }
 
 .note {
 	margin: 4px 0px;
 	padding-left: 20px;
 	color: #212121;
+	font-family: 'Enriqueta', serif;
+}
+
+.description {
+	padding: 10px;
+	background-color: #FFFFFF;
+	font-size: 12px;
+	color: #000;
 }
 
 .narrow {
@@ -197,6 +274,31 @@ body {
 .dark {
 	background-color: #212121;
 	color: #fff;
+}
+
+
+.cB {
+	color: #000;
+}
+
+.cD {
+	color: #212121;
+}
+
+.cW {
+	color: #FFF;
+}
+
+.cG {
+	color: #d8d8d8;
+}
+
+.cY {
+	color: #FFEB3B;
+}
+
+.cYd {
+	color: #FFAA3A;
 }
 
 .separation {
@@ -230,7 +332,7 @@ body {
 /* -- Carousel Galleries -- */
 .stepcarousel {
 	position: relative;
-	background: url('assets/mnuSide.png');/*#FDD835;*/
+	/*background: url('assets/mnuSide.png');/*#FDD835;*/
 	border: 10px solid #FBC02D;
 	overflow: hidden;
 	/* overflow: scroll; */
@@ -330,3 +432,27 @@ body {
 	top: 140px;
 }
 
+
+
+.gallery {
+	/*Image and Tags*/
+	max-width: 256px;
+	max-height: 144px;
+}
+
+.gallery:hover {
+	max-height: 154px;
+}
+
+.ghover {
+	width: 256px;
+	position: relative;
+	top: 0px;
+	filter: brightness(100%);
+	transition: top 0.2s ease-out, filter 0.2s;
+}
+
+.ghover:hover {
+	top: -10px;
+	filter: brightness(60%);
+}
